fix(web): local path

--- a/web/html/leaflet.html
+++ b/web/html/leaflet.html
@@ -34,8 +34,7 @@ L.marker([45.55, -122.67])
 
 var gl = L.mapboxGL({
     accessToken: 'no-token',
-    // get your own MapTiler token at https://cloud.maptiler.com/ or use MapBox style
-    style: 'https://api.maptiler.com/maps/topo/style.json?key=gbetYLSD5vR8MdtZ88AQ'
+    style: 'http://localhost:8070/gl-styles/3d/style.json'
 }).addTo(map);
 
 </script>
